k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-crud-service
spec:
  selector:
    app: crud-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
