k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-crud-ingress
  annotations:
    kubernetes.io/ingress.class: alb # Use the AWS Load Balancer Controller
    alb.ingress.kubernetes.io/scheme: internet-facing # Makes the ALB public
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]' # HTTP listener
    alb.ingress.kubernetes.io/backend-protocol: HTTP
spec:
  ingressClassName: alb # Specifies the ALB as the ingress class
  rules:
    - host:
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nodejs-crud-service
                port:
                  number: 80
